--- a/ar.html
+++ b/ar.html
@@ -142,9 +142,9 @@
 #hide{
  position: absolute;
    top: 5%;
-   left: 5%; 
-   right: 10%;
-   width: 20px;
+   left: 3%; 
+   
+   width: 100%;
    height: auto;
    z-index: 10;
 }
@@ -301,7 +301,9 @@
     <div id="myModelBg" class="Model-bg info-results">
     </div>
     <!-- create screenshot layer -->
+
     <div id="results" class="">
+      <img src="./players/boothicon.png" />
       <img src="" id="img" />
 
       <!-- screenshot image will be display within this div -->
