--- a/ar.html
+++ b/ar.html
@@ -11,7 +11,8 @@
   />
     
     <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
-    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+<!--     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script> -->
+    <srcipt src=./arjs.js"></srcipt>
    <script src="https://cdn.8thwall.com/web/xrextras/xrextras.js"></script>
    <script src="https://Assets.vossle.com/frontend2/js/animation-aframe-extras.min.js"></script>
     <script src="./gesture-detector.js"></script>
