--- a/ar.html
+++ b/ar.html
@@ -11,8 +11,8 @@
   />
     
     <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
-<!--     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script> -->
-    <srcipt src=./arjs.js"></srcipt>
+    <!-- <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script> -->
+    <script src="./arjs.js"></script>
    <script src="https://cdn.8thwall.com/web/xrextras/xrextras.js"></script>
    <script src="https://Assets.vossle.com/frontend2/js/animation-aframe-extras.min.js"></script>
     <script src="./gesture-detector.js"></script>
@@ -748,6 +748,24 @@ function countdown(seconds) {
     }
 </script>
 <script src="./screenshot.js"></script>
+<script>
+    // Get user media with constraints
+    const constraints = {
+      video: true
+    };
+
+    // Access the user's camera
+    navigator.mediaDevices.getUserMedia(constraints)
+      .then((stream) => {
+        const videoElement = document.createElement('video');
+        videoElement.srcObject = stream;
+        videoElement.autoplay = true;
+        document.body.appendChild(videoElement);
+      })
+      .catch((error) => {
+        console.error('Error accessing the camera: ', error);
+      });
+  </script>
     
 
 </html>
