--- a/ar.html
+++ b/ar.html
@@ -94,7 +94,7 @@
 }
 
 .playerimg{
- width: 5.5rem!important;
+ width: 4rem!important;
 }
 
      
@@ -304,7 +304,7 @@
     <!-- create screenshot layer -->
 
     <div id="results" class="">
-      <img src="./players/boothicon.png" />
+      <img src="./players/boothicon1.png" />
       <img src="" id="img" />
 
       <!-- screenshot image will be display within this div -->
