--- a/ar.html
+++ b/ar.html
@@ -475,10 +475,10 @@ function toggleSelection(playerId) {
       playerImage.src = './players/Juancho.png'
     }
     else if(playerId == 'player4'){
-      playerImage.src = './players/kostas.png'
+      playerImage.src = './players/Kostas.png'
     }
     else if(playerId == 'player5'){
-      playerImage.src = './players/kostasA.png'
+      playerImage.src = './players/KostasA.png'
     }
     else if(playerId == 'player6'){
       playerImage.src = './players/loannis.png'
@@ -506,10 +506,10 @@ function toggleSelection(playerId) {
       playerImage.src = './players/Juancho-selected.png'
     }
     else if(playerId == 'player4'){
-      playerImage.src = './players/kostass-selected.png'
+      playerImage.src = './players/Kostass-selected.png'
     }
     else if(playerId == 'player5'){
-      playerImage.src = './players/kostas-selected.png'
+      playerImage.src = './players/Kostas-selected.png'
     }
     else if(playerId == 'player6'){
       playerImage.src = './players/loannis-selected.png'
