--- a/ar.html
+++ b/ar.html
@@ -12,7 +12,7 @@
     
     <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
     <!-- <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script> -->
-    <script src="./arjs.js"></script>
+    <!-- <script src="./arjs.js"></script> -->
    <script src="https://cdn.8thwall.com/web/xrextras/xrextras.js"></script>
    <script src="https://Assets.vossle.com/frontend2/js/animation-aframe-extras.min.js"></script>
     <script src="./gesture-detector.js"></script>
@@ -244,6 +244,7 @@
   </head>
 
   <body>
+    <video style="height: 100%; width: 100%; display: none;" id="'videoCam"  ></video>
     <div id="splash-screen" >
       <img id="banner1" style="width: 15em; margin-bottom: 2vh;" src="./players/bannersplash.png" alt="banner1">
       <div id="row1" style="display: flex; flex-direction: row; justify-content: center;">
@@ -261,8 +262,8 @@
         <img id="player8" class="playerimg"   src="./players/Marius.png" alt="Player8" onclick="toggleSelection('player8')">
         <img id="player9"  class="playerimg"  src="./players/Ninos.png" alt="Player9" onclick="toggleSelection('player9')">
       </div>
-      <div style="display: flex; flex-direction: row; justify-content: flex-end; width: 100%; margin-top: 20px;">
-      <img  id = "start-button" src="./players/startbtn.png" alt="Button" onclick="startGame()">
+      <div style="display: flex; flex-direction: row; justify-content: flex-end; width: 100%; margin-top: 50px;">
+      <img  id = "start-button" src="./players/startbtn.png" alt="Button"  onclick="openCam()">
       </div>
     </div>
 
@@ -506,10 +507,10 @@ function toggleSelection(playerId) {
       playerImage.src = './players/Juancho-selected.png'
     }
     else if(playerId == 'player4'){
-      playerImage.src = './players/Kostass-selected.png'
+      playerImage.src = './players/KostasS-selected.png'
     }
     else if(playerId == 'player5'){
-      playerImage.src = './players/Kostas-selected.png'
+      playerImage.src = './players/kostas-selected.png'
     }
     else if(playerId == 'player6'){
       playerImage.src = './players/loannis-selected.png'
@@ -768,6 +769,35 @@ function countdown(seconds) {
         console.error('Error accessing the camera: ', error);
       });
   </script>
+
+<script>
+  function openCam(){
+     let All_mediaDevices=navigator.mediaDevices
+     if (!All_mediaDevices || !All_mediaDevices.getUserMedia) {
+        console.log("getUserMedia() not supported.");
+        return;
+     }
+     All_mediaDevices.getUserMedia({
+        audio: true,
+        video: true
+     })
+     .then(function(vidStream) {
+        var video = document.getElementById('videoCam');
+        video.style.display = 'block'
+        if ("srcObject" in video) {
+           video.srcObject = vidStream;
+        } else {
+           video.src = window.URL.createObjectURL(vidStream);
+        }
+        video.onloadedmetadata = function(e) {
+           video.play();
+        };
+     })
+     .catch(function(e) {
+        console.log(e.name + ": " + e.message);
+     });
+  }
+</script>
     
 
 </html>
