--- a/ar.html
+++ b/ar.html
@@ -362,8 +362,8 @@
       
       <a-assets>
         <a-asset-item id="model"  src=" "  ></a-asset-item>
-        <video id="video" muted playsinline ></video> 
-        <video id="video1" muted playsinline ></video> 
+        <video id="video" loop muted playsinline ></video> 
+        <video id="video1" loop muted playsinline ></video> 
         <img id="image" src="">
       </a-assets>
 
