--- a/ar.html
+++ b/ar.html
@@ -326,9 +326,9 @@
     <img id="image9" src="./videos/erignimg.png" style="    z-index: 100000;
     width: 207px;
     display: none;
-    height: 700px;
+    height: 1000px;
     position: absolute;
-    top: 200px;">
+    bottom: 50px;">
                           <!-- audio element -->
      <audio id="my-audio" src=""></audio>
 
