--- a/ar.html
+++ b/ar.html
@@ -330,7 +330,8 @@
     display: none;
     height: 1000px;
     position: absolute;
-    bottom: 50px;">
+    bottom: 50px;
+      margin-left: -50px">
 
 <img id="image10" src=" " style="    z-index: 100000;
 width: 350px;
@@ -338,7 +339,7 @@ display: none;
 height: 1000px;
 position: absolute;
 bottom: 50px;
-margin-left: 450px;">
+margin-left: 400px;">
                           <!-- audio element -->
      <audio id="my-audio" src=""></audio>
 
