--- a/ar.html
+++ b/ar.html
@@ -587,55 +587,55 @@ function startGame() {
       image.setAttribute('src', './videos/erignimg.png');
      }
      if(selectedPlayers[0] == 'player2'){
-      image.setAttribute('src', './videos/ergin.mp4');
+      image.setAttribute('src', './videos/jerian.png');
      }
      if(selectedPlayers[0] == 'player3'){
-      image.setAttribute('src', './videos/Hernagomez.mp4');
+      image.setAttribute('src', './videos/Hernagomez.png');
      }
      if(selectedPlayers[0] == 'player4'){
       image.setAttribute('src', './videos/kostasSimg.png');
      }
      if(selectedPlayers[0] == 'player5'){
-      image.setAttribute('src', './videos/ergin.mp4');
+      image.setAttribute('src', './videos/KostasA.png');
      }
      if(selectedPlayers[0] == 'player6'){
-      image.setAttribute('src', './videos/ergin.mp4');
+      image.setAttribute('src', './videos/loannis.png');
      }
      if(selectedPlayers[0] == 'player7'){
-      image.setAttribute('src', './videos/ergin.mp4');
+      image.setAttribute('src', './videos/Mathias.png');
      }
      if(selectedPlayers[0] == 'player8'){
-      image.setAttribute('src', './videos/ergin.mp4');
+      image.setAttribute('src', './videos/marius.png');
      }
      if(selectedPlayers[0] == 'player9'){
-      image.setAttribute('src', './videos/ergin.mp4');
+      image.setAttribute('src', './videos/ntinos.png');
      }
      if(selectedPlayers[1] == 'player1'){
       image1.setAttribute('src', './videos/erignimg.png');
      }
      if(selectedPlayers[1] == 'player2'){
-      image1.setAttribute('src', './videos/ergin.mp4');
+      image1.setAttribute('src', './videos/jerian.png');
      }
      if(selectedPlayers[1] == 'player3'){
-      image1.setAttribute('src', './videos/Hernagomez.mp4');
+      image1.setAttribute('src', './videos/Hernagomez.png');
      }
      if(selectedPlayers[1] == 'player4'){
       image1.setAttribute('src', './videos/kostasSimg.png');
      }
      if(selectedPlayers[1] == 'player5'){
-      image1.setAttribute('src', './videos/ergin.mp4');
+      image1.setAttribute('src', './videos/KostasA.png');
      }
      if(selectedPlayers[1] == 'player6'){
-      image1.setAttribute('src', './videos/ergin.mp4');
+      image1.setAttribute('src', './videos/loannis.png');
      }
      if(selectedPlayers[1] == 'player7'){
-      image1.setAttribute('src', './videos/ergin.mp4');
+      image1.setAttribute('src', './videos/Mathias.png');
      }
      if(selectedPlayers[1] == 'player8'){
-      image1.setAttribute('src', './videos/ergin.mp4');
+      image1.setAttribute('src', './videos/marius.png');
      }
      if(selectedPlayers[1] == 'player9'){
-      image1.setAttribute('src', './videos/ergin.mp4');
+      image1.setAttribute('src', './videos/ntinos.png');
      }
      
         
